# audio-pdf

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
docs/: prospect-tracker.md
prompts/: editor.md  judge.md
src/etat_des_lieux/: __main__.py  assemble.py  config.py  edit.py  judge.py  pipeline.py  references.py  transcribe.py  web.py
src/etat_des_lieux/static/: app.js  index.html  styles.css
